Deployment/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abq-gce-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "ingress-webapps"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: abq-ca
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
        - alphabloq.tech
        - www.alphabloq.tech
      secretName: abq-web-tls
  rules:
  - host: alphabloq.tech
    http:
      paths:
      - path: "/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: abq-website-service
            port:
              name: abq-web-n-port
